[gd_scene load_steps=57 format=3 uid="uid://byufb1ir0dmio"]

[ext_resource type="Script" path="res://scripts/BringerOfDeath.gd" id="1_f35kd"]
[ext_resource type="Texture2D" uid="uid://6ymn657iblh0" path="res://assets/enemy_asset/Bringer-Of-Death/Individual Sprite/Attack/Bringer-of-Death_Attack_1.png" id="1_m4wty"]
[ext_resource type="Texture2D" uid="uid://crrmfh0eyn2w" path="res://assets/enemy_asset/Bringer-Of-Death/Individual Sprite/Attack/Bringer-of-Death_Attack_2.png" id="2_4hfxv"]
[ext_resource type="Texture2D" uid="uid://dg3u8nxhk2abs" path="res://assets/enemy_asset/Bringer-Of-Death/Individual Sprite/Attack/Bringer-of-Death_Attack_3.png" id="3_ylu5g"]
[ext_resource type="Texture2D" uid="uid://ccvpkjnrd5tlk" path="res://assets/enemy_asset/Bringer-Of-Death/Individual Sprite/Attack/Bringer-of-Death_Attack_4.png" id="4_btmgw"]
[ext_resource type="Texture2D" uid="uid://nrgpyqi0epns" path="res://assets/enemy_asset/Bringer-Of-Death/Individual Sprite/Attack/Bringer-of-Death_Attack_5.png" id="5_dp24c"]
[ext_resource type="Texture2D" uid="uid://dmli1ind2ya26" path="res://assets/enemy_asset/Bringer-Of-Death/Individual Sprite/Attack/Bringer-of-Death_Attack_6.png" id="6_1i10s"]
[ext_resource type="Texture2D" uid="uid://fn2jw5tryl3c" path="res://assets/enemy_asset/Bringer-Of-Death/Individual Sprite/Attack/Bringer-of-Death_Attack_7.png" id="7_ewgea"]
[ext_resource type="Texture2D" uid="uid://1eoasw3yms1p" path="res://assets/enemy_asset/Bringer-Of-Death/Individual Sprite/Attack/Bringer-of-Death_Attack_8.png" id="8_m7ki6"]
[ext_resource type="Texture2D" uid="uid://dk8pp52lwdlcn" path="res://assets/enemy_asset/Bringer-Of-Death/Individual Sprite/Attack/Bringer-of-Death_Attack_9.png" id="9_pgwr0"]
[ext_resource type="Texture2D" uid="uid://c8mrgs6t4cjx7" path="res://assets/enemy_asset/Bringer-Of-Death/Individual Sprite/Attack/Bringer-of-Death_Attack_10.png" id="10_ttfgr"]
[ext_resource type="Texture2D" uid="uid://bihv82mmp3te7" path="res://assets/enemy_asset/Bringer-Of-Death/Individual Sprite/Hurt/Bringer-of-Death_Hurt_1.png" id="12_4v23y"]
[ext_resource type="Texture2D" uid="uid://dh4eansmc1y76" path="res://assets/enemy_asset/Bringer-Of-Death/Individual Sprite/Death/Bringer-of-Death_Death_1.png" id="12_38s3w"]
[ext_resource type="Texture2D" uid="uid://bgs43e8kx3rtb" path="res://assets/enemy_asset/Bringer-Of-Death/Individual Sprite/Cast/Bringer-of-Death_Cast_1.png" id="12_43rdg"]
[ext_resource type="Texture2D" uid="uid://db6t8f8x7ddrk" path="res://assets/enemy_asset/Bringer-Of-Death/Individual Sprite/Death/Bringer-of-Death_Death_2.png" id="13_o6tti"]
[ext_resource type="Texture2D" uid="uid://dsptf6wn7h7c6" path="res://assets/enemy_asset/Bringer-Of-Death/Individual Sprite/Cast/Bringer-of-Death_Cast_2.png" id="13_pr6ml"]
[ext_resource type="Texture2D" uid="uid://drg0kqrehhe2d" path="res://assets/enemy_asset/Bringer-Of-Death/Individual Sprite/Hurt/Bringer-of-Death_Hurt_2.png" id="13_qsoed"]
[ext_resource type="Texture2D" uid="uid://ckgudtr1n40eu" path="res://assets/enemy_asset/Bringer-Of-Death/Individual Sprite/Death/Bringer-of-Death_Death_3.png" id="14_7bhls"]
[ext_resource type="Texture2D" uid="uid://d26pilu0vp5b3" path="res://assets/enemy_asset/Bringer-Of-Death/Individual Sprite/Cast/Bringer-of-Death_Cast_3.png" id="14_dl5g1"]
[ext_resource type="Texture2D" uid="uid://7fn0m7eylde6" path="res://assets/enemy_asset/Bringer-Of-Death/Individual Sprite/Hurt/Bringer-of-Death_Hurt_3.png" id="14_dv1tx"]
[ext_resource type="Texture2D" uid="uid://cn21bt7tqtioq" path="res://assets/enemy_asset/Bringer-Of-Death/Individual Sprite/Cast/Bringer-of-Death_Cast_4.png" id="15_hvggo"]
[ext_resource type="Texture2D" uid="uid://bceto7mef12uw" path="res://assets/enemy_asset/Bringer-Of-Death/Individual Sprite/Death/Bringer-of-Death_Death_4.png" id="15_wgwrb"]
[ext_resource type="Texture2D" uid="uid://dqc76nd5aavie" path="res://assets/enemy_asset/Bringer-Of-Death/Individual Sprite/Cast/Bringer-of-Death_Cast_5.png" id="16_m6s26"]
[ext_resource type="Texture2D" uid="uid://bkeejs34c7r46" path="res://assets/enemy_asset/Bringer-Of-Death/Individual Sprite/Death/Bringer-of-Death_Death_5.png" id="16_pvhii"]
[ext_resource type="Texture2D" uid="uid://d4m2qy25fgspe" path="res://assets/enemy_asset/Bringer-Of-Death/Individual Sprite/Death/Bringer-of-Death_Death_6.png" id="17_8vy8o"]
[ext_resource type="Texture2D" uid="uid://bdnyu25c27rmf" path="res://assets/enemy_asset/Bringer-Of-Death/Individual Sprite/Cast/Bringer-of-Death_Cast_6.png" id="17_e7vlc"]
[ext_resource type="Texture2D" uid="uid://dli5qjbasxdss" path="res://assets/enemy_asset/Bringer-Of-Death/Individual Sprite/Death/Bringer-of-Death_Death_7.png" id="18_irto2"]
[ext_resource type="Texture2D" uid="uid://m0fokikk8phm" path="res://assets/enemy_asset/Bringer-Of-Death/Individual Sprite/Cast/Bringer-of-Death_Cast_7.png" id="18_vh8m8"]
[ext_resource type="Texture2D" uid="uid://i3v6x0m4d4qv" path="res://assets/enemy_asset/Bringer-Of-Death/Individual Sprite/Cast/Bringer-of-Death_Cast_8.png" id="19_kk0fm"]
[ext_resource type="Texture2D" uid="uid://g476t6rksoda" path="res://assets/enemy_asset/Bringer-Of-Death/Individual Sprite/Death/Bringer-of-Death_Death_8.png" id="19_uf3fg"]
[ext_resource type="Texture2D" uid="uid://ccr0prh6nrmq1" path="res://assets/enemy_asset/Bringer-Of-Death/Individual Sprite/Cast/Bringer-of-Death_Cast_9.png" id="20_8dbgx"]
[ext_resource type="Texture2D" uid="uid://dxjbh7l8m2nw5" path="res://assets/enemy_asset/Bringer-Of-Death/Individual Sprite/Death/Bringer-of-Death_Death_9.png" id="20_d4ihl"]
[ext_resource type="Texture2D" uid="uid://dgwpks2udps3w" path="res://assets/enemy_asset/Bringer-Of-Death/Individual Sprite/Death/Bringer-of-Death_Death_10.png" id="21_7jhns"]
[ext_resource type="Texture2D" uid="uid://cmm20j4boltav" path="res://assets/enemy_asset/Bringer-Of-Death/Individual Sprite/Walk/Bringer-of-Death_Walk_1.png" id="23_74wbx"]
[ext_resource type="Texture2D" uid="uid://bb86xvfwtvpid" path="res://assets/enemy_asset/Bringer-Of-Death/Individual Sprite/Idle/Bringer-of-Death_Idle_1.png" id="24_4l4er"]
[ext_resource type="Texture2D" uid="uid://d00ngiyhnc4kt" path="res://assets/enemy_asset/Bringer-Of-Death/Individual Sprite/Walk/Bringer-of-Death_Walk_2.png" id="24_7nige"]
[ext_resource type="Texture2D" uid="uid://cswawrdju102u" path="res://assets/enemy_asset/Bringer-Of-Death/Individual Sprite/Idle/Bringer-of-Death_Idle_2.png" id="25_o2h4g"]
[ext_resource type="Texture2D" uid="uid://ca8vk3j4kxjdi" path="res://assets/enemy_asset/Bringer-Of-Death/Individual Sprite/Walk/Bringer-of-Death_Walk_3.png" id="25_xk6co"]
[ext_resource type="Texture2D" uid="uid://bjdq20ypcg1l0" path="res://assets/enemy_asset/Bringer-Of-Death/Individual Sprite/Idle/Bringer-of-Death_Idle_3.png" id="26_lm66d"]
[ext_resource type="Texture2D" uid="uid://cn8mr0m24snpf" path="res://assets/enemy_asset/Bringer-Of-Death/Individual Sprite/Walk/Bringer-of-Death_Walk_4.png" id="26_qojkn"]
[ext_resource type="Texture2D" uid="uid://clccf4bfmip0t" path="res://assets/enemy_asset/Bringer-Of-Death/Individual Sprite/Idle/Bringer-of-Death_Idle_4.png" id="27_cobsx"]
[ext_resource type="Texture2D" uid="uid://ce7y62j4evxu2" path="res://assets/enemy_asset/Bringer-Of-Death/Individual Sprite/Walk/Bringer-of-Death_Walk_5.png" id="27_xa376"]
[ext_resource type="Texture2D" uid="uid://b0wvufri5w2hw" path="res://assets/enemy_asset/Bringer-Of-Death/Individual Sprite/Walk/Bringer-of-Death_Walk_6.png" id="28_j2g4o"]
[ext_resource type="Texture2D" uid="uid://bd1ijyy7c14m7" path="res://assets/enemy_asset/Bringer-Of-Death/Individual Sprite/Idle/Bringer-of-Death_Idle_5.png" id="28_ne4os"]
[ext_resource type="Texture2D" uid="uid://1tt1f7cq4oq" path="res://assets/enemy_asset/Bringer-Of-Death/Individual Sprite/Idle/Bringer-of-Death_Idle_6.png" id="29_5odbd"]
[ext_resource type="Texture2D" uid="uid://bxqjex05evpi7" path="res://assets/enemy_asset/Bringer-Of-Death/Individual Sprite/Walk/Bringer-of-Death_Walk_7.png" id="29_jlwoo"]
[ext_resource type="Texture2D" uid="uid://b48bx0xjdy2tu" path="res://assets/enemy_asset/Bringer-Of-Death/Individual Sprite/Idle/Bringer-of-Death_Idle_7.png" id="30_lrtlt"]
[ext_resource type="Texture2D" uid="uid://c2vl2t150s171" path="res://assets/enemy_asset/Bringer-Of-Death/Individual Sprite/Walk/Bringer-of-Death_Walk_8.png" id="30_u0rh8"]
[ext_resource type="Texture2D" uid="uid://de7t8ubi5tvik" path="res://assets/enemy_asset/Bringer-Of-Death/Individual Sprite/Idle/Bringer-of-Death_Idle_8.png" id="31_wsrhw"]
[ext_resource type="PackedScene" uid="uid://bfnmde8f8404r" path="res://scenes/HealthBar.tscn" id="40_pryr0"]
[ext_resource type="AudioStream" uid="uid://nujg8eui6fwc" path="res://assets/SFX/RPG_Essentials_Free/10_Battle_SFX/22_Slash_04.wav" id="51_yrpn1"]
[ext_resource type="AudioStream" uid="uid://bq5is3ek7xrt6" path="res://assets/SFX/RPG_Essentials_Free/8_Atk_Magic_SFX/04_Fire_explosion_04_medium.wav" id="52_urnuy"]

[sub_resource type="SpriteFrames" id="SpriteFrames_0aohk"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("1_m4wty")
}, {
"duration": 1.0,
"texture": ExtResource("2_4hfxv")
}, {
"duration": 1.0,
"texture": ExtResource("3_ylu5g")
}, {
"duration": 1.0,
"texture": ExtResource("4_btmgw")
}, {
"duration": 1.0,
"texture": ExtResource("5_dp24c")
}, {
"duration": 1.0,
"texture": ExtResource("6_1i10s")
}, {
"duration": 1.0,
"texture": ExtResource("7_ewgea")
}, {
"duration": 1.0,
"texture": ExtResource("8_m7ki6")
}, {
"duration": 1.0,
"texture": ExtResource("9_pgwr0")
}, {
"duration": 1.0,
"texture": ExtResource("10_ttfgr")
}],
"loop": false,
"name": &"attack",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("12_43rdg")
}, {
"duration": 1.0,
"texture": ExtResource("13_pr6ml")
}, {
"duration": 1.0,
"texture": ExtResource("14_dl5g1")
}, {
"duration": 1.0,
"texture": ExtResource("15_hvggo")
}, {
"duration": 1.0,
"texture": ExtResource("16_m6s26")
}, {
"duration": 1.0,
"texture": ExtResource("17_e7vlc")
}, {
"duration": 1.0,
"texture": ExtResource("18_vh8m8")
}, {
"duration": 1.0,
"texture": ExtResource("19_kk0fm")
}, {
"duration": 1.0,
"texture": ExtResource("20_8dbgx")
}],
"loop": false,
"name": &"cast",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("12_38s3w")
}, {
"duration": 1.0,
"texture": ExtResource("13_o6tti")
}, {
"duration": 1.0,
"texture": ExtResource("14_7bhls")
}, {
"duration": 1.0,
"texture": ExtResource("15_wgwrb")
}, {
"duration": 1.0,
"texture": ExtResource("16_pvhii")
}, {
"duration": 1.0,
"texture": ExtResource("17_8vy8o")
}, {
"duration": 1.0,
"texture": ExtResource("18_irto2")
}, {
"duration": 1.0,
"texture": ExtResource("19_uf3fg")
}, {
"duration": 1.0,
"texture": ExtResource("20_d4ihl")
}, {
"duration": 1.0,
"texture": ExtResource("21_7jhns")
}],
"loop": false,
"name": &"dead",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("12_4v23y")
}, {
"duration": 1.0,
"texture": ExtResource("13_qsoed")
}, {
"duration": 1.0,
"texture": ExtResource("14_dv1tx")
}],
"loop": false,
"name": &"hit",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("24_4l4er")
}, {
"duration": 1.0,
"texture": ExtResource("25_o2h4g")
}, {
"duration": 1.0,
"texture": ExtResource("26_lm66d")
}, {
"duration": 1.0,
"texture": ExtResource("27_cobsx")
}, {
"duration": 1.0,
"texture": ExtResource("28_ne4os")
}, {
"duration": 1.0,
"texture": ExtResource("29_5odbd")
}, {
"duration": 1.0,
"texture": ExtResource("30_lrtlt")
}, {
"duration": 1.0,
"texture": ExtResource("31_wsrhw")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("23_74wbx")
}, {
"duration": 1.0,
"texture": ExtResource("24_7nige")
}, {
"duration": 1.0,
"texture": ExtResource("25_xk6co")
}, {
"duration": 1.0,
"texture": ExtResource("26_qojkn")
}, {
"duration": 1.0,
"texture": ExtResource("27_xa376")
}, {
"duration": 1.0,
"texture": ExtResource("28_j2g4o")
}, {
"duration": 1.0,
"texture": ExtResource("29_jlwoo")
}, {
"duration": 1.0,
"texture": ExtResource("30_u0rh8")
}],
"loop": true,
"name": &"walk",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_y60ey"]
size = Vector2(24, 33)

[sub_resource type="CircleShape2D" id="CircleShape2D_uv06c"]
radius = 15.0

[sub_resource type="CircleShape2D" id="CircleShape2D_nqw8m"]
radius = 186.0

[node name="BringerOfDeath" type="CharacterBody2D"]
collision_layer = 5
script = ExtResource("1_f35kd")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(-22, 12)
scale = Vector2(0.604839, 0.604839)
sprite_frames = SubResource("SpriteFrames_0aohk")
animation = &"hit"
autoplay = "idle"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 23.5)
shape = SubResource("RectangleShape2D_y60ey")

[node name="HealthBar" parent="." instance=ExtResource("40_pryr0")]
offset_left = -21.0
offset_top = -2.0
offset_right = 21.0
offset_bottom = 2.0

[node name="Node2D" type="Node2D" parent="."]

[node name="Area2D" type="Area2D" parent="Node2D"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Node2D/Area2D"]
position = Vector2(-14, 24)
shape = SubResource("CircleShape2D_uv06c")

[node name="DetectionArea2D" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="DetectionArea2D"]
shape = SubResource("CircleShape2D_nqw8m")

[node name="AttackAudio" type="AudioStreamPlayer" parent="."]
stream = ExtResource("51_yrpn1")

[node name="CastAudio" type="AudioStreamPlayer" parent="."]
stream = ExtResource("52_urnuy")

[connection signal="animation_finished" from="AnimatedSprite2D" to="." method="_on_animated_sprite_2d_animation_finished"]
[connection signal="body_entered" from="Node2D/Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_entered" from="DetectionArea2D" to="." method="_on_detection_area_2d_body_entered"]
